Fixed invisible value in font size picker

--- a/skin/workarounds.less
+++ b/skin/workarounds.less
@@ -64,3 +64,10 @@ menuitem[type="radio"]
 #open-in-rx-btn, #pin-btn {
     -moz-appearance: none !important;
 }
+
+/* make the value inside font size picker visible,
+ * small width causes that the value isn't visible
+ */
+#specificSize, #commonSize, #fontSize {
+    min-width: 50px;
+}
